--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="text/javascript" href="js/script.js">
@@ -9,14 +9,15 @@
 	<title>Document</title>
 </head>
 <body>
-	<div contenteditable="true">
+	<div contenteditable="true" class="textEditor">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laudantium maxime placeat vel voluptatem id dolore pariatur commodi inventore suscipit, blanditiis excepturi possimus voluptatum, adipisci explicabo at optio velit aliquid!</p>
 	</div>
 
 	<div class="window glvrd">
-		<div contenteditable="true">
+		<div contenteditable="true" class="textEditor">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laudantium maxime placeat vel voluptatem id dolore pariatur commodi inventore suscipit, blanditiis excepturi possimus voluptatum, adipisci explicabo at optio velit aliquid!</p>
-	</div>
+		</div>
+		<p>Стасик жирный павук!</p>
 	</div>
 
 </body>
