--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="text/javascript" href="js/script.js">
+	<link rel="text/javascript" href="src/hr.js">
+	<!-- <link rel="text/javascript" href="src/hr.min.js"> -->
 	<script src="https://api.glvrd.ru/v1/glvrd.js"></script>
 	<link href="https://api.glvrd.ru/v1/glvrd.css" rel="stylesheet" type="text/css" />
 	<meta charset="UTF-8">
@@ -20,5 +22,10 @@
 		<p>Стасик жирный павук!</p>
 	</div>
 
+	<p class="container" class="textEditor"	>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, praesentium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, praesentium.
+	</p>
+
+	<button id="multiple_btn">СОЧНЫЙ МОЩНЫЙ БАТОН</button>
 </body>
 </html>
