--- a/demka/demka.html
+++ b/demka/demka.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Roistat / Стоп-слова</title>
-		  <link href="./Highlight-Ta Demo_files/sticky.css" rel="stylesheet" type="text/css">
-		<link rel="stylesheet" href="./Highlight-Ta Demo_files/highlight-ta.css">
+		  <link href="src/sticky.css" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="src/highlight-ta.css">
 	</head>
 
 <body>
@@ -17,8 +17,8 @@
 			</div>
 	</div>
 
-	<script type="text/javascript" src="./Highlight-Ta Demo_files/highlight-ta.js"></script>
-	<script type="text/javascript" src="./Highlight-Ta Demo_files/highlight-ta-demo.js"></script>
+	<script type="text/javascript" src="src/highlight-ta.js"></script>
+	<script type="text/javascript" src="src/highlight-ta-demo.js"></script>
 
 </body>
 </html>
